# 80240793-Big-Data-Intelligence

./: .gitignore  README.md  pyproject.toml
bdint/: data.py  ensemble.ipynb  experiments.py  explore_catboost.ipynb  explore_nn.ipynb  features.py  kaggle_test.ipynb  lasso_learningrate.ipynb  main.py  predictions_on_line.ipynb  preprocessing.py  regression_coefficients.ipynb  runner.py  skew.ipynb  starter.ipynb
bdint/anal/cat_boost/: numerical_feature_extraction.txt  one_feature.txt
bdint/anal/kernel_ridge/: skew_th.txt
bdint/anal/random_tree/: estimators.txt
bdint/kaggle/: submission.csv
bdint/models/: __init__.py  average.py  basemodel.py  catboost.py  kernel_ridge.py  nn.py  random_forest.py  utils.py
bdint/models/catboost_models/: model_0.cbm
