[tool.poetry]
name = "bdint"
version = "0.1.0"
description = ""
authors = ["Adrian Fagerland <adrian.fagerland@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
torch = "^2.1.1"
kaggle = "^1.5.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
