[tool.poetry]
name = "bdint"
version = "0.1.0"
description = ""
authors = ["Adrian Fagerland <adrian.fagerland@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
torch = "^2.1.1"
kaggle = "^1.5.16"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
catboost = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
